--- a/prototype/app/src/main/res/layout/activity_story_template.xml
+++ b/prototype/app/src/main/res/layout/activity_story_template.xml
@@ -72,7 +72,8 @@
 
         </FrameLayout>
 
-        <ScrollView
+        <com.example.make_a_story_prototype.main.StoryTemplate.view.ObservableScrollView
+            android:id="@+id/story_scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="9dp"
@@ -92,7 +93,7 @@
             android:lineSpacingExtra="3dp"
             android:textColor="@color/colorAppBlack" />
 
-        </ScrollView>
+        </com.example.make_a_story_prototype.main.StoryTemplate.view.ObservableScrollView>
 
     </LinearLayout>
 
