--- a/prototype/app/src/main/res/layout/controls_bar.xml
+++ b/prototype/app/src/main/res/layout/controls_bar.xml
@@ -39,7 +39,7 @@
             app:srcCompat="@drawable/pause_icon" />
 
         <ProgressBar
-            android:id="@+id/determinateBar"
+            android:id="@+id/progress_bar"
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
