added popup dialog when back button pressed on story template screen. pressing no discards story blank selections

--- a/prototype/app/src/main/res/values/colors.xml
+++ b/prototype/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="colorContrastOrange">#FD6F21</color>
 
     <color name="colorLightGreen">#E8F5E9</color>
-    <color name="colorContrastGreen">#1E5D23</color>
+    <color name="colorContrastGreen">#0AAF18</color>
 
     <color name="colorLightPurple">#EDE7F5</color>
     <color name="colorContrastPurple">#31228F</color>
