--- a/prototype/app/src/main/res/layout/activity_story_template.xml
+++ b/prototype/app/src/main/res/layout/activity_story_template.xml
@@ -97,4 +97,14 @@
 
     </LinearLayout>
 
+        <include
+            android:id="@+id/popup_dialog"
+            layout="@layout/popup"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="275dp"
+            android:layout_marginStart="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"/>
+
 </RelativeLayout>
