--- a/prototype/app/src/main/res/layout/activity_story_selection.xml
+++ b/prototype/app/src/main/res/layout/activity_story_selection.xml
@@ -41,7 +41,7 @@
                         android:id="@+id/special_invention_text"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:contentDescription="special_invention_text_description"
+                        android:contentDescription="@string/the_special_invention_content_description"
                         android:fontFamily="@font/comfortaa_bold"
                         android:text="@string/the_special_invention_text"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -83,7 +83,7 @@
                         android:id="@+id/the_space_alien_text"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:contentDescription="@string/space_alien_text"
+                        android:contentDescription="@string/space_alien_content_description"
                         android:fontFamily="@font/comfortaa_bold"
                         android:text="@string/the_space_alien"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -125,7 +125,7 @@
                         android:id="@+id/wacky_costume_text"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:contentDescription="the_wacky_costume_party_text"
+                        android:contentDescription="@string/the_wacky_costume_party_content_description"
                         android:fontFamily="@font/comfortaa_bold"
                         android:text="@string/the_wacky_costume_party_text"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -167,7 +167,7 @@
                         android:id="@+id/santas_elf_text"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:contentDescription="santas_elf_text_description"
+                        android:contentDescription=""
                         android:fontFamily="@font/comfortaa_bold"
                         android:text="Santa's Mixed-up Helper Elf"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
