--- a/prototype/app/src/main/res/drawable/shadow.xml
+++ b/prototype/app/src/main/res/drawable/shadow.xml
@@ -2,9 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_selected="true">
-        <shape
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle"   >
+        <shape android:shape="rectangle"   >
 
             <solid
                 android:color="#888888" >
