--- a/prototype/app/src/main/res/layout/activity_categories.xml
+++ b/prototype/app/src/main/res/layout/activity_categories.xml
@@ -19,8 +19,9 @@
         android:layout_marginTop="70dp"
         android:layout_marginRight="12dp"
         android:layout_marginBottom="12dp"
-        android:paddingRight="20dp"
         android:background="@drawable/border"
+        android:paddingLeft="0dp"
+        android:paddingEnd="20dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
 </RelativeLayout>
