--- a/prototype/app/src/main/res/layout/activity_character_guide.xml
+++ b/prototype/app/src/main/res/layout/activity_character_guide.xml
@@ -19,7 +19,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.911"
-        app:srcCompat="@drawable/charguide" />
+        app:srcCompat="@drawable/charguide"
+        android:contentDescription="@string/charGuideDescription" />
 
     <ImageView
         android:id="@+id/speechBubble"
@@ -32,7 +33,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.147"
-        app:srcCompat="@drawable/speechbubble" />
+        app:srcCompat="@drawable/speechbubble"
+        android:contentDescription="@string/speechBubbleDescription" />
 
     <TextView
         android:id="@+id/charTextMsg"
