--- a/prototype/app/src/main/res/layout/activity_quiz.xml
+++ b/prototype/app/src/main/res/layout/activity_quiz.xml
@@ -92,7 +92,7 @@
                 android:layout_marginStart="180dp"
                 android:layout_marginEnd="181dp"
                 android:layout_marginBottom="25dp"
-                android:contentDescription="Repeat audio"
+                android:contentDescription="@string/speakerIconDescription"
                 app:layout_constraintBottom_toTopOf="@+id/option1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="75dp"
                 android:layout_marginTop="20dp"
-                android:contentDescription="acheivement star 1"
+                android:contentDescription="@string/star1Description"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/star2"
                 app:srcCompat="@drawable/ic_star" />
@@ -115,7 +115,7 @@
                 android:layout_height="67dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="35dp"
-                android:contentDescription="achievement star 2"
+                android:contentDescription="@string/star2Description"
                 app:layout_constraintStart_toEndOf="@+id/star1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_star" />
@@ -126,7 +126,7 @@
                 android:layout_height="80dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
-                android:contentDescription="achievement star 3"
+                android:contentDescription="@string/star3Description"
                 app:layout_constraintStart_toEndOf="@+id/star2"
                 app:layout_constraintTop_toTopOf="@+id/star2"
                 app:srcCompat="@drawable/ic_star" />
