--- a/prototype/app/src/main/res/layout/card_item.xml
+++ b/prototype/app/src/main/res/layout/card_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -9,8 +8,8 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp">
 
