--- a/prototype/app/src/main/res/layout/toolbar.xml
+++ b/prototype/app/src/main/res/layout/toolbar.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Title"
         android:textColor="@android:color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_gravity="center"
         android:id="@+id/toolbar_title" />
 
