--- a/prototype/app/src/main/res/layout/story_card_item.xml
+++ b/prototype/app/src/main/res/layout/story_card_item.xml
@@ -24,18 +24,40 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                        <ImageView
-                            android:id="@+id/cardImage"
-                            android:layout_width="220dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginEnd="5dp"
-                            android:adjustViewBounds="true"
-                            android:contentDescription="@string/story_image"
-                            app:layout_constraintEnd_toStartOf="@+id/cardText"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/story_space_alien_1" />
 
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/image_holder"
+                                android:layout_width="220dp"
+                                android:layout_height="wrap_content"
+                                card_view:cardCornerRadius="23dp"
+                                app:layout_constraintEnd_toStartOf="@+id/cardText"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent">
+
+                                <FrameLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/asymmetric_card_edge"
+                                    app:layout_constraintEnd_toStartOf="@+id/cardText"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent">
+
+                                    <ImageView
+                                        android:id="@+id/cardImage"
+                                        android:layout_width="220dp"
+                                        android:layout_height="match_parent"
+                                        android:adjustViewBounds="true"
+                                        android:background="@drawable/card_edge"
+                                        android:contentDescription="@string/story_image"
+                                        app:srcCompat="@drawable/story_space_alien_5_compressed" />
+
+                                    <View
+                                        android:layout_width="220dp"
+                                        android:layout_height="match_parent"
+                                        android:background="@drawable/gradient"/>
+                                </FrameLayout>
+
+                            </androidx.cardview.widget.CardView>
 
                         <TextView
                             android:id="@+id/cardText"
@@ -44,7 +66,8 @@
                             android:padding="5dp"
                             android:text="The Space Alien"
                             android:textColor="@color/colorPrimaryDark"
-                            android:textSize="12pt"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                            android:fontFamily="@font/comfortaa_bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
