--- a/prototype/app/src/main/res/layout/story_card_item.xml
+++ b/prototype/app/src/main/res/layout/story_card_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -11,19 +11,18 @@
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardUseCompatPadding="true"
             card_view:cardCornerRadius="10dp">
 
                 <RelativeLayout
                     android:id="@+id/parent_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin=".75dp"
                     android:background="@drawable/card_edge">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-
 
                             <androidx.cardview.widget.CardView
                                 android:id="@+id/image_holder"
@@ -36,25 +35,21 @@
 
                                 <FrameLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:background="@drawable/asymmetric_card_edge"
-                                    app:layout_constraintEnd_toStartOf="@+id/cardText"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent">
+                                    android:layout_height="wrap_content">
 
                                     <ImageView
                                         android:id="@+id/cardImage"
-                                        android:layout_width="220dp"
+                                        android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:adjustViewBounds="true"
                                         android:background="@drawable/card_edge"
                                         android:contentDescription="@string/story_image"
                                         app:srcCompat="@drawable/story_space_alien_5_compressed" />
 
-                                    <View
-                                        android:layout_width="220dp"
-                                        android:layout_height="match_parent"
-                                        android:background="@drawable/gradient"/>
+<!--                                    <View-->
+<!--                                        android:layout_width="220dp"-->
+<!--                                        android:layout_height="match_parent"-->
+<!--                                        android:background="@drawable/gradient"/>-->
                                 </FrameLayout>
 
                             </androidx.cardview.widget.CardView>
@@ -63,11 +58,11 @@
                             android:id="@+id/cardText"
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
+                            android:fontFamily="@font/comfortaa_bold"
                             android:padding="5dp"
                             android:text="The Space Alien"
-                            android:textColor="@color/colorPrimaryDark"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                            android:fontFamily="@font/comfortaa_bold"
+                            android:textColor="@color/colorPrimaryDark"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -75,4 +70,4 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </RelativeLayout>
         </androidx.cardview.widget.CardView>
-</FrameLayout>
+</RelativeLayout>
