cswitching character screen to use client-provided images. changes to story selection screen to use repository

--- a/prototype/app/src/main/res/values/attrs.xml
+++ b/prototype/app/src/main/res/values/attrs.xml
@@ -9,6 +9,7 @@
     <attr name="colorPrimaryLight" format="color" />
     <attr name="colorAppBlack" format="color" />
     <attr name="colorYellow" format="color" />
+    <attr name="colorLightGray" format="color" />
 
 
     <attr name="colorLightRed" format="color" />
