--- a/prototype/app/src/main/res/values/colors.xml
+++ b/prototype/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorAppBlack">#212121</color>
     <color name="colorYellow">#fed62b</color>
+    <color name="colorLightGray">#DDDCDC</color>
+
 
 
     <!-- card backgrounds  -->
