--- a/prototype/app/src/main/res/drawable/asymmetric_card_edge.xml
+++ b/prototype/app/src/main/res/drawable/asymmetric_card_edge.xml
@@ -2,9 +2,9 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android" >
         <solid android:color="@color/colorLightPurple" />
-        <size android:width="0dp"/>
-        <padding android:bottom="0dp" android:left="2dp" android:right="0dp" android:top="0dp"/>
-        <margin android:bottom="0dp" android:left="2dp" android:right="0dp" android:top="0dp"/>
+        <size android:width="220dp" android:height="220dp"/>
+        <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp"/>
+        <margin android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp"/>
         <corners android:topLeftRadius="10dp" android:bottomLeftRadius="10dp"
             android:topRightRadius="0dp" android:bottomRightRadius="0dp"/>
     </shape>
