--- a/prototype/app/src/main/res/layout/story_card_item.xml
+++ b/prototype/app/src/main/res/layout/story_card_item.xml
@@ -1,73 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_height="wrap_content">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="3dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardUseCompatPadding="true"
-            card_view:cardCornerRadius="10dp">
+            card_view:cardCornerRadius="10dp"
+            android:background="@drawable/card_edge"
+            android:elevation="10dp">
 
-                <RelativeLayout
-                    android:id="@+id/parent_layout"
+            <RelativeLayout
+                android:id="@+id/parent_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/card_edge">
+
+                <ImageView
+                    android:id="@+id/card_image"
+                    android:layout_width="220dp"
+                    android:layout_height="220dp"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/asymmetric_card_edge"
+                    android:contentDescription="@string/story_image"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/story_space_alien_5_compressed" />
+
+                <TextView
+                    android:id="@+id/card_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/card_edge">
+                    android:padding="5dp"
+                    android:layout_toRightOf="@+id/card_image"
+                    android:fontFamily="@font/comfortaa_bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginBottom="3dp"
+                    android:drawablePadding="-20dp"
+                    android:gravity="center_horizontal"
+                    android:text="line 1"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20sp" />
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+            </RelativeLayout>
 
-                            <androidx.cardview.widget.CardView
-                                android:id="@+id/image_holder"
-                                android:layout_width="220dp"
-                                android:layout_height="wrap_content"
-                                card_view:cardCornerRadius="23dp"
-                                app:layout_constraintEnd_toStartOf="@+id/cardText"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent">
-
-                                <FrameLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
-
-                                    <ImageView
-                                        android:id="@+id/cardImage"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:adjustViewBounds="true"
-                                        android:background="@drawable/card_edge"
-                                        android:contentDescription="@string/story_image"
-                                        app:srcCompat="@drawable/story_space_alien_5_compressed" />
-
-<!--                                    <View-->
-<!--                                        android:layout_width="220dp"-->
-<!--                                        android:layout_height="match_parent"-->
-<!--                                        android:background="@drawable/gradient"/>-->
-                                </FrameLayout>
-
-                            </androidx.cardview.widget.CardView>
-
-                        <TextView
-                            android:id="@+id/cardText"
-                            android:layout_width="150dp"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/comfortaa_bold"
-                            android:padding="5dp"
-                            android:text="The Space Alien"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                            android:textColor="@color/colorPrimaryDark"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </RelativeLayout>
         </androidx.cardview.widget.CardView>
-</RelativeLayout>
+    </FrameLayout>
+</FrameLayout>
