--- a/prototype/app/src/main/res/layout/activity_home.xml
+++ b/prototype/app/src/main/res/layout/activity_home.xml
@@ -8,30 +8,6 @@
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewCharacter"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:onClick="homeCharacterOnClick"
-        app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="2dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/cardViewWordBank"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardViewStories">
-
-        <ImageView
-            android:id="@+id/friends_image"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
-            android:contentDescription="@string/friends_image_description"
-            app:srcCompat="@drawable/homescreen_friends_icon" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
         android:id="@+id/cardViewWordBank"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -43,15 +19,25 @@
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cardViewCharacter"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardViewStories">
 
         <ImageView
             android:id="@+id/word_bank_image"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
+            android:layout_width="75dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="20dp"
             android:contentDescription="@string/wordbank_image_description"
             app:srcCompat="@drawable/homescreen_wordbank_icon" />
+
+        <TextView
+            android:id="@+id/wordbank_text"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tWord Bank"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="36sp" />
 
     </androidx.cardview.widget.CardView>
 
@@ -75,7 +61,7 @@
         <ImageView
             android:id="@+id/stories_image"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="550dp"
             android:contentDescription="@string/stories_image_description"
             app:srcCompat="@drawable/homescreen_stories_icon" />
 
