--- a/prototype/app/src/main/res/layout/activity_story_template.xml
+++ b/prototype/app/src/main/res/layout/activity_story_template.xml
@@ -1,94 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/colorPrimaryLight">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.make_a_story_prototype.main.StoryTemplate.view.SceneImage
+        android:id="@+id/scene_image"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1.46"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+    <com.example.make_a_story_prototype.main.StoryTemplate.view.ObservableScrollView
+        android:id="@+id/story_scroll"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/colorWhite"
+        android:padding="2dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@id/controls_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scene_image">
+
+        <TextView
+            android:id="@+id/story_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:lineSpacingExtra="3dp"
+            android:lineSpacingMultiplier="1.5"
+            android:padding="15dp"
+            android:textColor="@color/colorAppBlack"
+            android:textSize="12pt" />
+
+    </com.example.make_a_story_prototype.main.StoryTemplate.view.ObservableScrollView>
 
     <include
         android:id="@+id/controls_bar"
         layout="@layout/controls_bar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <include
+        android:id="@+id/popup_dialog"
+        layout="@layout/popup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
-        <FrameLayout
-            android:id="@+id/image_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-<!--        <ImageView-->
-<!--            android:id="@+id/story_image"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="280dp"-->
-<!--            android:layout_marginTop="64dp"-->
-<!--            android:layout_marginStart="9dp"-->
-<!--            android:layout_marginEnd="9dp"-->
-<!--            android:contentDescription="@string/story_image"-->
-<!--            android:padding="0dp"-->
-<!--            android:visibility="visible"-->
-<!--            app:srcCompat="@drawable/story_space_alien_1" />-->
-
-            <include
-                layout="@layout/scene_image"
-                android:layout_width="match_parent"
-                android:layout_height="280dp"
-                android:layout_marginTop="64dp"
-                android:layout_marginStart="9dp"
-                android:layout_marginEnd="9dp"
-                android:contentDescription="@string/story_image"
-                android:padding="0dp"
-                android:visibility="visible"
-                app:srcCompat="@drawable/story_space_alien_1" />
-
-
-                    </FrameLayout>
-
-                    <com.example.make_a_story_prototype.main.StoryTemplate.view.ObservableScrollView
-                        android:id="@+id/story_scroll"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="9dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="9dp"
-                        android:layout_marginBottom="67dp"
-                        android:padding="2dp"
-                        android:scrollbars="none"
-                        android:background="@color/colorWhite">
-                    <TextView
-                        android:id="@+id/story_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="15dp"
-                        android:textSize="12pt"
-                        android:lineSpacingMultiplier="1.5"
-                        android:lineSpacingExtra="3dp"
-                        android:textColor="@color/colorAppBlack" />
-
-                    </com.example.make_a_story_prototype.main.StoryTemplate.view.ObservableScrollView>
-
-                </LinearLayout>
-
-                    <include
-                        android:id="@+id/popup_dialog"
-                        layout="@layout/popup"
-                        android:layout_width="wrap_content"
-                        android:layout_marginTop="275dp"
-                        android:layout_marginStart="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:visibility="gone"/>
-
-            </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
