--- a/prototype/app/src/main/res/layout/activity_story_template.xml
+++ b/prototype/app/src/main/res/layout/activity_story_template.xml
@@ -16,9 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include
-        android:id="@+id/story_page"
-        layout="@layout/story_page"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/story_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
