--- a/prototype/app/src/main/res/layout/activity_story_template.xml
+++ b/prototype/app/src/main/res/layout/activity_story_template.xml
@@ -30,6 +30,10 @@
         layout="@layout/popup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="250dp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
