--- a/prototype/app/src/main/res/layout/activity_home.xml
+++ b/prototype/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,7 +36,7 @@
         <ImageView
             android:id="@+id/stories_image"
             android:layout_width="match_parent"
-            android:layout_height="550dp"
+            android:layout_height="395dp"
             android:contentDescription="@string/stories_image_description"
             app:srcCompat="@drawable/homescreen_stories_icon" />
 
@@ -45,7 +46,8 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewWordBank"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="154dp"
+        android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:onClick="homeWordBankOnClick"
         app:cardBackgroundColor="@color/colorPrimary"
@@ -60,7 +62,7 @@
         <ImageView
             android:id="@+id/word_bank_image"
             android:layout_width="75dp"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="20dp"
             android:contentDescription="@string/wordbank_image_description"
             app:srcCompat="@drawable/homescreen_wordbank_icon" />
@@ -68,9 +70,10 @@
         <TextView
             android:id="@+id/wordbank_text"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/comfortaa_bold"
-            android:text="\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tWord Bank"
+            android:text="\n\t\t\t\t\t\t\t\t\t\t\tWord Bank"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="36sp" />
 
